<resources>
    <string name="app_name">ZZ_AlarmClock</string>
    <string name="bar_setting">編輯</string>
    <string name="bar_name">鬧鐘</string>

    <!--alarm utils-->
    <string name="sunday">週日</string>
    <string name="monday">週一</string>
    <string name="tuesday">週二</string>
    <string name="wednesday">週三</string>
    <string name="thursday">週四</string>
    <string name="friday">週五</string>
    <string name="saturday">週六</string>
    <string name="timeNull" translatable="false">--:--</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>

    <string name="failure_network">網路連線失敗</string>
    <string name="weather_update">天氣資料更新中</string>
    <string name="current_weather">目前天氣</string>
    <string name="pref_city_default">Ivano-Frankivsk</string>
    <string name="pref_city_key" translatable="false">settings_edit_city_name</string>
    <string name="pref_default_temp_format" translatable="false">Celsius</string>
    <string name="pref_temp_format_key" translatable="false">settings_list_temp_format</string>
    <string name="pref_temp_celsius" translatable="false">Celsius</string>
    <string name="pref_temp_fahrenheit" translatable="false">Fahrenheit</string>
    <string name="cel" translatable="false">" °C"</string>
    <string name="fahr" translatable="false">" °F"</string>

    <!--alarm activity-->
    <string name="time" translatable="false">00</string>
    <string name="timePoint" translatable="false">:</string>
    <string name="alarmTextTag">標籤</string>
    <string name="alarmRepeat">重複</string>
    <string name="alarmRepeatChoice">永不</string>
    <string name="alarmRepeatEveryDay">每天</string>
    <string name="alarmRingtone">鈴聲</string>
    <string name="alarmRingChoice" translatable="false">雷達</string>
    <string name="alarmSwitchVibration">震動</string>
    <string name="alarmRemind">稍後提醒</string>


    <string name="buttonCancel">取消</string>
    <string name="buttonDelect">刪除</string>
    <string name="buttonSave">儲存</string>


    <string-array name="spnRepeat">
        <item>@string/alarmRepeatChoice</item>
        <item>@string/alarmRepeatEveryDay</item>
        <!--item>星期日</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item-->
    </string-array>

</resources>